manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployed
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: deployed
  type: ClusterIP
